--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gsap": "^3.12.7",
     "three": "^0.172.0",
     "vite": "^6.0.9"
   }
